--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
-    background-color: peachpuff;
-    background-size: cover;
-    background-position: top center;
 }
 
 .app-wrap {
@@ -54,16 +51,15 @@ main{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    color:#313131
 }
 
 .location .city{
-    color:#fff;
     font-size: 32px;
     font-weight: 500;
     margin-bottom: 5px;
 }
 
 .location .date{
-    color:#fff;
     font-size: 16px;
 }
